css/style.css
body
{
    margin: 0;
    padding: 0;

    background-color: #E8DF9C;
    font-family: Helvetica;
}

/* SIDEBAR */
.sidebar
{
    width: 20%;
    height: 100%;
    position: fixed;
    background-color: #F75E50;
}

/* MENU */
.menu
{
    margin-top: 100px;
    padding: 0;

    list-style-type: none;

    font-size: 1.6rem;
    font-family: CarterOne;
    letter-spacing: 1px;

    text-align: center;
}

.menu li
{
    padding: 5px 0;
}

.menu li:first-child
{
    padding-top: 0;
}

.menu li a
{
    color: white;
    text-shadow: 2px 2px #7D7769;
    text-decoration: none;
}

.menu a:hover
{
    color: #EAC761;
    text-decoration: underline;
}

/* SOCIAL */
.social
{
    position: absolute;
    bottom: 15px;

    left: 50%;

    width: 180px;
}

.social--icon-container
{
    position: relative;
    left: -50%;
}

.social--icon
{
    width: 50px;
    height: 50px;

    float: left;

    margin: 5px 5px;
}

.linkedin
{
    background: url(../img/linkedin.png);
}

.social--icon:hover
{
    background-position-y: -50px;
}

.unity
{
    background: url(../img/unity.png);
}

.github
{
    background: url(../img/github.png);
}

/* MAIN */
.main
{
    margin: 0;
    width: 80%;
    float: right;
}

/* FIRST PAGE */
.first-page
{
    height: 100vh;
    width: 100%;
}

/* BANNER */
.banner
{
    display: block;
    margin: 25px auto; 
}

/* CONTAINER */
.container
{
    margin-right: 10%;
}

/* ROWS */
.row
{
    padding: 15px 0;

    margin: 0;
}

.row--fixed-height
{
    height: 150px;
}

.row--paragraph
{
    padding-left: 10px;
}

.row--paragraph h1
{
    color: #7D7769;
}

/* QUOTE */
.quote
{
    height: 100%;
    width: 70%;
    
    float: left;

    font-size: 1.5rem;
    font-family: "Times New Roman";
    font-style: italic;
    text-align: center;
    text-decoration: underline;
    color: white;

    background: #7D7769;
}

/* DESCRIPTION */
.description
{
    width: 100%;
    background: #EAC761;    
    
    padding: 15px 5px;
}

/* INFO */
.info
{
    float: left;
    width: 30%;
}

.info img
{
    width: 150px;
    height: 150px;
    
    float: left;

    padding:0 5px;
    margin-right: 5px;
}

.info p
{
    color: white;
    line-height: 1.75rem;

    display: inline;
    background: #F75E50;

    padding: 5px 0;
}

/* ICON */
.icon
{
    width: 33.333%;
    
    float: left;

    text-align: center;
}

.icon p
{
    background: #91C09E;

    margin: 10px;
}

.icon img
{
    display: block;
    margin: auto;
    
    width: 128px;
    height: 128px;

    background: lightgoldenrodyellow;
}

/* BUTTON */
.button
{
    background: #91C09E;

    display: block;
    float: right;

    padding: 10px 10px;
    margin: 5px 5px;

    text-decoration: none;
    color: #FFF;

    border-radius: 2px;
    box-shadow: 2px 2px #7D7769;
}

.button:hover
{
    background: #F75E50;

    text-decoration: underline;
}

/* FONTS */
@font-face
{
    font-family: CarterOne;
    src: url(../fonts/carter-one.regular.ttf);
}

